feat: switch to virtual-thread executor, add bounded semaphore (100k), auto-release permits, update README with gzip + limits